--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
 	<head>
-	   <h1>heading</h1>
-	   <h2>heading 2</h2>
+		<style>
+			H1{color:blue;font-size:300%}
+			p{color : blue}
+		</style>
+		<h1>heading</h1>
+	   	<h2>heading 2</h2>
 	</head>
 	<body>
 		<p>paragraph</p>
